--- a/package.json
+++ b/package.json
@@ -4,21 +4,19 @@
   "description": "Alhambra Advanced Collection",
   "keywords": "advanced, collection",
   "license": "GPL-2.0",
-  "authors" : [
-    {
-      "name": "Andrés Prieto-Moreno",
-      "url": "https://github.com/andrespmt"
-    },
-    
-  ],
-  "contributors": [
-    {
-      "name": "Juan González",
-      "url": "https://github.com/Obijuan"
-    },
-  ],
+  "authors": [{
+    "name": "Andrés Prieto-Moreno",
+    "email": "",
+    "url": "https://github.com/andrespmt"
+  }],
+  "contributors": [{
+   "name": "Juan González",
+    "email": "",
+    "url": "https://github.com/Obijuan"
+  }],
   "repository": {
     "type": "git",
-    "url": "https://github.com/andrespmt/alhambra-advanced-collection"
+    "branch": "master",
+    "url": ""
   }
 }
